fixed: video stuck loading and  GUI improvements

--- a/style.css
+++ b/style.css
@@ -231,13 +231,6 @@ button {
   line-height: 1.5;
 }
 
-footer {
-  text-align: center;
-  background-color: #15418c;
-  padding: 1rem;
-  margin-top: 1rem;
-}
-
 @media (max-width: 1300px) {
   .main {
     margin: 1rem;
